gungraun/tests/ui/test_binary_benchmark_group_when_invalid.stderr
error: A binary_benchmark_group! needs a name and at least 1 benchmark function annotated with #[binary_benchmark] or the low level syntax. See the documentation of this macro for more details.

       hint: binary_benchmark_group!(name = some_ident, benchmarks = [ benchmark_1, benchmark_2 ]);
 --> tests/ui/test_binary_benchmark_group_when_invalid.rs:4:5
  |
4 |     binary_benchmark_group!();
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `binary_benchmark_group` (in Nightly builds, run with -Z macro-backtrace for more info)

error: A binary_benchmark_group! needs a unique name. See the documentation of this macro for further details.

       hint = binary_benchmark_group!(name = some_ident, benchmarks = some_binary_benchmark);
  --> tests/ui/test_binary_benchmark_group_when_invalid.rs:15:5
   |
15 | /     binary_benchmark_group!(
16 | |         benchmarks =
17 | |     );
   | |_____^
   |
   = note: this error originates in the macro `binary_benchmark_group` (in Nightly builds, run with -Z macro-backtrace for more info)

error: A binary_benchmark_group! needs a unique name. See the documentation of this macro for further details.

       hint = binary_benchmark_group!(name = some_ident, benchmarks = some_binary_benchmark);
  --> tests/ui/test_binary_benchmark_group_when_invalid.rs:19:5
   |
19 |     binary_benchmark_group!(benchmarks = bench);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `binary_benchmark_group` (in Nightly builds, run with -Z macro-backtrace for more info)

error: A binary_benchmark_group! needs a unique name. See the documentation of this macro for further details.

       hint = binary_benchmark_group!(name = some_ident, benchmarks = some_binary_benchmark);
  --> tests/ui/test_binary_benchmark_group_when_invalid.rs:21:5
   |
21 | /     binary_benchmark_group!(
22 | |         config = LibraryBenchmarkConfig::default(),
23 | |         compare_by_id = true,
24 | |         max_parallel = 0,
...  |
27 | |         benchmarks =
28 | |     );
   | |_____^
   |
   = note: this error originates in the macro `binary_benchmark_group` (in Nightly builds, run with -Z macro-backtrace for more info)

error: A binary_benchmark_group! needs a unique name. See the documentation of this macro for further details.

       hint = binary_benchmark_group!(name = some_ident, benchmarks = some_binary_benchmark);
  --> tests/ui/test_binary_benchmark_group_when_invalid.rs:30:5
   |
30 | /     binary_benchmark_group!(
31 | |         config = LibraryBenchmarkConfig::default(),
32 | |         compare_by_id = true,
33 | |         max_parallel = 0,
...  |
36 | |         benchmarks = bench
37 | |     );
   | |_____^
   |
   = note: this error originates in the macro `binary_benchmark_group` (in Nightly builds, run with -Z macro-backtrace for more info)

error: You are using an invalid or deprecated syntax of the binary_benchmark_group! macro to set up binary benchmarks. See the documentation of this macro, the README (https://github.com/gungraun/gungraun) or the docs (https://docs.rs/gungraun/latest/gungraun) for further details.

       hint: binary_benchmark_group!(name = some_name, benchmarks = [ bench_1, bench_2 ])
  --> tests/ui/test_binary_benchmark_group_when_invalid.rs:39:5
   |
39 | /     binary_benchmark_group!(
40 | |         config = LibraryBenchmarkConfig::default();
41 | |         compare_by_id = true;
42 | |         max_parallel = 0,
...  |
45 | |         benchmarks =
46 | |     );
   | |_____^
   |
   = note: this error originates in the macro `binary_benchmark_group` (in Nightly builds, run with -Z macro-backtrace for more info)

error: You are using an invalid or deprecated syntax of the binary_benchmark_group! macro to set up binary benchmarks. See the documentation of this macro, the README (https://github.com/gungraun/gungraun) or the docs (https://docs.rs/gungraun/latest/gungraun) for further details.

       hint: binary_benchmark_group!(name = some_name, benchmarks = [ bench_1, bench_2 ])
  --> tests/ui/test_binary_benchmark_group_when_invalid.rs:48:5
   |
48 | /     binary_benchmark_group!(
49 | |         config = LibraryBenchmarkConfig::default();
50 | |         compare_by_id = true;
51 | |         max_parallel = 0,
...  |
54 | |         benchmarks = bench
55 | |     );
   | |_____^
   |
   = note: this error originates in the macro `binary_benchmark_group` (in Nightly builds, run with -Z macro-backtrace for more info)

error: A binary_benchmark_group! needs a unique name. See the documentation of this macro for further details.

       hint = binary_benchmark_group!(name = some_ident, benchmarks = some_binary_benchmark);
  --> tests/ui/test_binary_benchmark_group_when_invalid.rs:57:5
   |
57 |     binary_benchmark_group!(benchmarks = [bench]);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `binary_benchmark_group` (in Nightly builds, run with -Z macro-backtrace for more info)

error: A binary_benchmark_group! needs a unique name. See the documentation of this macro for further details.

       hint = binary_benchmark_group!(name = some_ident, benchmarks = some_binary_benchmark);
  --> tests/ui/test_binary_benchmark_group_when_invalid.rs:58:5
   |
58 |     binary_benchmark_group!(benchmarks = bench, bench);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `binary_benchmark_group` (in Nightly builds, run with -Z macro-backtrace for more info)

error: A binary_benchmark_group! needs a unique name. See the documentation of this macro for further details.

       hint = binary_benchmark_group!(name = some_ident, benchmarks = some_binary_benchmark);
  --> tests/ui/test_binary_benchmark_group_when_invalid.rs:59:5
   |
59 |     binary_benchmark_group!(benchmarks = [bench, bench]);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `binary_benchmark_group` (in Nightly builds, run with -Z macro-backtrace for more info)

error: A binary_benchmark_group! needs at least 1 benchmark function which is annotated with #[binary_benchmark] or you can use the low level syntax. See the documentation of this macro for further details.

       hint = binary_benchmark_group!(name = some_ident, benchmarks = some_binary_benchmark);
  --> tests/ui/test_binary_benchmark_group_when_invalid.rs:66:5
   |
66 | /     binary_benchmark_group!(
67 | |         name = some,
68 | |         benchmarks =
69 | |     );
   | |_____^
   |
   = note: this error originates in the macro `binary_benchmark_group` (in Nightly builds, run with -Z macro-backtrace for more info)

error: You are using an invalid or deprecated syntax of the binary_benchmark_group! macro to set up binary benchmarks. See the documentation of this macro, the README (https://github.com/gungraun/gungraun) or the docs (https://docs.rs/gungraun/latest/gungraun) for further details.

       hint: binary_benchmark_group!(name = some_name, benchmarks = [ bench_1, bench_2 ])
  --> tests/ui/test_binary_benchmark_group_when_invalid.rs:71:5
   |
71 | /     binary_benchmark_group!(
72 | |         name = some,
73 | |         benchmarks = |group|
74 | |     );
   | |_____^
   |
   = note: this error originates in the macro `binary_benchmark_group` (in Nightly builds, run with -Z macro-backtrace for more info)

error: You are using an invalid or deprecated syntax of the binary_benchmark_group! macro to set up binary benchmarks. See the documentation of this macro, the README (https://github.com/gungraun/gungraun) or the docs (https://docs.rs/gungraun/latest/gungraun) for further details.

       hint: binary_benchmark_group!(name = some_name, benchmarks = [ bench_1, bench_2 ])
  --> tests/ui/test_binary_benchmark_group_when_invalid.rs:76:5
   |
76 | /     binary_benchmark_group!(
77 | |         name = some,
78 | |         benchmarks = |group: &mut BinaryBenchmarkGroup|
79 | |     );
   | |_____^
   |
   = note: this error originates in the macro `binary_benchmark_group` (in Nightly builds, run with -Z macro-backtrace for more info)

error: A binary_benchmark_group! needs at least 1 benchmark function which is annotated with #[binary_benchmark] or you can use the low level syntax. See the documentation of this macro for further details.

       hint = binary_benchmark_group!(name = some_ident; benchmarks = some_binary_benchmark);
  --> tests/ui/test_binary_benchmark_group_when_invalid.rs:82:5
   |
82 | /     binary_benchmark_group!(
83 | |         name = some;
84 | |         benchmarks =
85 | |     );
   | |_____^
   |
   = note: this error originates in the macro `binary_benchmark_group` (in Nightly builds, run with -Z macro-backtrace for more info)

error: This low level form of the binary_benchmark_group! needs you to use the `BinaryBenchmarkGroup` to setup benchmarks. See the documentation of this macro for further details.

       hint = binary_benchmark_group!(name = some_ident, benchmarks = |group| { group.binary_benchmark(/* BinaryBenchmark::new */); });
  --> tests/ui/test_binary_benchmark_group_when_invalid.rs:87:5
   |
87 | /     binary_benchmark_group!(
88 | |         name = some;
89 | |         benchmarks = |group|
90 | |     );
   | |_____^
   |
   = note: this error originates in the macro `binary_benchmark_group` (in Nightly builds, run with -Z macro-backtrace for more info)

error: This low level form of the binary_benchmark_group! needs you to use the `BinaryBenchmarkGroup` to setup benchmarks. See the documentation of this macro for further details.

       hint = binary_benchmark_group!(name = some_ident, benchmarks = |group: &mut BinaryBenchmarkGroup| { group.binary_benchmark(/* BinaryBenchmark::new */); });
  --> tests/ui/test_binary_benchmark_group_when_invalid.rs:92:5
   |
92 | /     binary_benchmark_group!(
93 | |         name = some;
94 | |         benchmarks = |group: &mut BinaryBenchmarkGroup|
95 | |     );
   | |_____^
   |
   = note: this error originates in the macro `binary_benchmark_group` (in Nightly builds, run with -Z macro-backtrace for more info)

error: You are using an invalid or deprecated syntax of the binary_benchmark_group! macro to set up binary benchmarks. See the documentation of this macro, the README (https://github.com/gungraun/gungraun) or the docs (https://docs.rs/gungraun/latest/gungraun) for further details.

       hint: binary_benchmark_group!(name = some_name, benchmarks = [ bench_1, bench_2 ])
   --> tests/ui/test_binary_benchmark_group_when_invalid.rs:101:5
    |
101 |     binary_benchmark_group!(name = some);
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |
    = note: this error originates in the macro `binary_benchmark_group` (in Nightly builds, run with -Z macro-backtrace for more info)

error: A binary_benchmark_group! needs at least 1 benchmark function which is annotated with #[binary_benchmark] or you can use the low level syntax. See the documentation of this macro for further details.

       hint = binary_benchmark_group!(name = some_ident, benchmarks = some_binary_benchmark);
   --> tests/ui/test_binary_benchmark_group_when_invalid.rs:102:5
    |
102 |     binary_benchmark_group!(name = some,);
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |
    = note: this error originates in the macro `binary_benchmark_group` (in Nightly builds, run with -Z macro-backtrace for more info)

error: A binary_benchmark_group! needs at least 1 benchmark function which is annotated with #[binary_benchmark] or you can use the low level syntax. See the documentation of this macro for further details.

       hint = binary_benchmark_group!(name = some_ident; benchmarks = some_binary_benchmark);
   --> tests/ui/test_binary_benchmark_group_when_invalid.rs:103:5
    |
103 | /     binary_benchmark_group!(
104 | |         name = some;
105 | |     );
    | |_____^
    |
    = note: this error originates in the macro `binary_benchmark_group` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
   --> tests/ui/test_binary_benchmark_group_when_invalid.rs:117:59
    |
117 |     binary_benchmark_group!(name = some_1, max_parallel = None, benchmarks = some_func);
    |     ------------------------------------------------------^^^^-------------------------
    |     |                                                     |
    |     |                                                     expected `usize`, found `Option<_>`
    |     expected due to this
    |
    = note: expected type `usize`
               found enum `Option<_>`

error[E0308]: mismatched types
   --> tests/ui/test_binary_benchmark_group_when_invalid.rs:118:59
    |
118 |     binary_benchmark_group!(name = some_2, max_parallel = 0i32, benchmarks = some_func);
    |     ------------------------------------------------------^^^^-------------------------
    |     |                                                     |
    |     |                                                     expected `usize`, found `i32`
    |     expected due to this
    |
help: change the type of the numeric literal from `i32` to `usize`
    |
118 |     binary_benchmark_group!(name = some_2, max_parallel = 0usize, benchmarks = some_func);
    |                                                            ~~~~~

error[E0308]: mismatched types
   --> tests/ui/test_binary_benchmark_group_when_invalid.rs:122:24
    |
120 | /     binary_benchmark_group!(
121 | |         name = some_3,
122 | |         max_parallel = None,
    | |                        ^^^^ expected `usize`, found `Option<_>`
123 | |         benchmarks = [some_func, some_func]
124 | |     );
    | |_____- expected due to this
    |
    = note: expected type `usize`
               found enum `Option<_>`

error[E0308]: mismatched types
   --> tests/ui/test_binary_benchmark_group_when_invalid.rs:127:59
    |
127 |     binary_benchmark_group!(name = some_4; max_parallel = None; benchmarks = some_func);
    |     ------------------------------------------------------^^^^-------------------------
    |     |                                                     |
    |     |                                                     expected `usize`, found `Option<_>`
    |     expected due to this
    |
    = note: expected type `usize`
               found enum `Option<_>`

error[E0308]: mismatched types
   --> tests/ui/test_binary_benchmark_group_when_invalid.rs:128:59
    |
128 |     binary_benchmark_group!(name = some_5; max_parallel = 0i32; benchmarks = some_func);
    |     ------------------------------------------------------^^^^-------------------------
    |     |                                                     |
    |     |                                                     expected `usize`, found `i32`
    |     expected due to this
    |
help: change the type of the numeric literal from `i32` to `usize`
    |
128 |     binary_benchmark_group!(name = some_5; max_parallel = 0usize; benchmarks = some_func);
    |                                                            ~~~~~

error[E0308]: mismatched types
   --> tests/ui/test_binary_benchmark_group_when_invalid.rs:131:24
    |
129 | /     binary_benchmark_group!(
130 | |         name = some_6;
131 | |         max_parallel = None;
    | |                        ^^^^ expected `usize`, found `Option<_>`
132 | |         benchmarks = some_func, some_func
133 | |     );
    | |_____- expected due to this
    |
    = note: expected type `usize`
               found enum `Option<_>`
